--- a/app/views/refinery/admin_search/_search.html.erb
+++ b/app/views/refinery/admin_search/_search.html.erb
@@ -8,15 +8,18 @@
                 title: t('search_input_notice', scope: 'refinery.admin.search') %>
 
     <input type="image" src="<%= asset_url('refinery/icons/zoom.png'); %>">
-
-    <a title="Toggle search options" href="#search-options" class="nojs-hide icon-small toggle-icon toggle-hide">Search options</a>
+    <% if search_model.searchable_attributes.many? %>
+      <a title="Toggle search options" href="#search-options" class="nojs-hide icon-small toggle-icon toggle-hide">Search options</a>
+    <% end %>
 
     <a href="<%= url %>"
       class="<%= 'hide' if params[:search].blank? %> icon-small reset-icon">Cancel search</a>
   </div>
-  <div class="field js-hide" id="search-options">
-    <% search_in = options_for_select(search_model.searchable_attributes.collect { |a| [t(a, scope: "activerecord.attributes.#{search_model.model_name.i18n_key}"), a]}, params[:search_in]) %>
-    <%= select_tag(:search_in, search_in) %>
-  </div>
+  <% if search_model.searchable_attributes.many? %>
+    <div class="field js-hide" id="search-options">
+      <% search_in = options_for_select(search_model.searchable_attributes.collect { |a| [t(a, scope: "activerecord.attributes.#{search_model.model_name.i18n_key}"), a]}, params[:search_in]) %>
+      <%= select_tag(:search_in, search_in) %>
+    </div>
+  <% end %>
 </form>
 
