pagination in search results + unified templates

--- a/app/views/refinery/admin/images/_search_results.html.erb
+++ b/app/views/refinery/admin/images/_search_results.html.erb
@@ -1,7 +1,9 @@
 <% if @images.any? %>
+  <%= will_paginate @images %>
   <ul class="records">
     <%= render partial: 'list_view_image', collection: @images %>
   </ul>
+  <%= will_paginate @images %>
 <% else %>
   <%= render 'refinery/admin/search/no_results' %>
 <% end %>
